--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "actix-csrf-middleware"
 version = "0.3.0"
-edition = "2024"
+edition = "2021"
 license = "MIT"
 authors = ["Andrew <zeek@tuta.com>"]
 repository = "https://github.com/yoozzeek/actix-csrf-middleware"
 keywords = ["security", "csrf", "web", "middleware", "actix-web"]
 description = "CSRF protection middleware for Actix Web applications. Supports double submit cookie and synchronizer token patterns (with actix-session) out of the box. Flexible, easy to configure, and includes test coverage for common attacks and edge cases."
 documentation = "https://docs.rs/actix-csrf-middleware"
-rust-version = "1.85.0"
+rust-version = "1.56.0"
 
 [lib]
 crate-type = ["rlib"]
@@ -28,6 +28,7 @@ rand = "0.9.1"
 sha2 = "0.10"
 hmac = "0.12"
 hex = "0.4.3"
+subtle = "2.6"
 serde_json = "1.0.140"
 serde_urlencoded = "0.7.1"
 log = "0.4.27"
