ADD: two classes of CSRF tokens; pre_session id is random, unpredictable and signed;

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ log = "0.4.27"
 criterion = "0.5"
 actix-rt = "2.10"
 actix-multipart = "0.7.2"
+proptest = "1.4"
 
 [[bench]]
 name = "hmac_token"
